# rules_dotnet

./: .bazelrc  .gitignore  .travis.yml  BUILD  BUILD.bazel  CHANGELOG.md  CHANGELOG.rst  CONTRIBUTING.md  MODULE.bazel  README.md  README.rst  WORKSPACE  WORKSPACE.bzlmod  appveyor.yml  azure-pipelines.yml  go.mod  index.rst  internal_deps.bzl  packages.json  paket.dependencies  readme.md  rules_dotnet.sln  tidy.sh
dotnet/: BUILD  BUILD.bazel  core.rst  csharp.bzl  defs.bzl  deps.bzl  dev_nugets.bzl  gazelle_setup.bzl  mono_unpack.sh  nugets.bzl  paket.paket2bazel_dependencies.bzl  paket.paket2bazel_dependencies_extension.bzl  paket.rules_dotnet_dev_nuget_packages.bzl  paket.rules_dotnet_dev_nuget_packages_extension.bzl  paket.rules_dotnet_nuget_packages.bzl  paket.rules_dotnet_nuget_packages_extension.bzl  paket2bazel_dependencies.bzl  paket2bazel_dependencies_extension.bzl  repositories.bzl  rules_dotnet_dev_nuget_packages.bzl  rules_dotnet_dev_nuget_packages_extension.bzl  rules_dotnet_nuget_packages.bzl  rules_dotnet_nuget_packages_extension.bzl  toolchain.bzl  toolchains.rst  workspace.rst
dotnet/platform/: BUILD  list.bzl
dotnet/private/: BUILD  BUILD.bazel  BUILD.core.bazel  BUILD.net.bazel  BUILD.sdk.bazel  common.bzl  compiler_wrapper.bat  compiler_wrapper.sh  context.bzl  core_toolchain.bzl  dotnet_toolchain.bzl  dotnet_wrapper.bat  dotnet_wrapper.sh  launcher.bat.tpl  launcher.sh.tpl  net_empty_toolchain.bzl  net_toolchain.bzl  netstandard_toolchain.bzl  nugets.bzl  providers.bzl  repositories.bzl  rids.bzl  runtime_generated.bzl  runtimeconfig_self_contained.json.tpl  sdk.bzl  sdk_core.bzl  sdk_net.bzl  sdk_netstandard.bzl  semver.bzl  toolchains_repo.bzl  versions.bzl
dotnet/private/actions/: BUILD.bazel  assembly.bzl  assembly_common.bzl  assembly_core.bzl  assembly_net.bzl  assembly_netstandard.bzl  com_ref_net.bzl  csharp_assembly.bzl  fsharp_assembly.bzl  resolve.bzl  resx.bzl  resx_core.bzl  resx_net.bzl  resx_netstandard.bzl
dotnet/private/macros/: nuget.bzl  register_tfms.bzl  setup_basic_nuget_package.bzl
dotnet/private/rules/: binary.bzl  binary_core.bzl  binary_net.bzl  com_ref.bzl  common.bzl  gac_net.bzl  import.bzl  import_binary_core.bzl  import_binary_net.bzl  import_core.bzl  import_net.bzl  imports.bzl  library.bzl  library_core.bzl  library_net.bzl  library_set.bzl  libraryset.bzl  nuget.bzl  nuget_archive.bzl  nuget_repo.bzl  override.BUILD  resource_core.bzl  resx.bzl  resx_net.bzl  runfiles.bzl  stdlib.bzl  stdlib_net.bzl  template.BUILD  test.bzl  test_core.bzl  test_net.bzl  test_net3.bzl  versions.bzl  vs_ref_net.bzl
dotnet/private/sdk/: sdk_versions.bzl
dotnet/private/stdlib/: 2.1.200.bzl  2.1.502.bzl  2.1.503.bzl  2.2.101.bzl  2.2.402.bzl
dotnet/private/tests/: BUILD.bazel  dependencies.bzl
dotnet/private/transitions/: BUILD.bazel  nuget_transition.bzl  tfm_transition.bzl
dotnet/settings/: BUILD.bazel
dotnet/stdlib/: BUILD.bazel  generated.bzl
dotnet/stdlib.core/: BUILD.bazel  generated.bzl  generated2.bzl  macro.bzl
dotnet/stdlib.core/v2.1.200/: BUILD.bazel  generated.bzl  generated2.bzl
dotnet/stdlib.core/v2.1.502/: BUILD.bazel  generated.bzl  generated2.bzl
dotnet/stdlib.core/v2.1.503/: BUILD.bazel  generated.bzl  generated2.bzl
dotnet/stdlib.core/v2.2.101/: BUILD.bazel  generated.bzl  generated2.bzl
dotnet/stdlib.core/v2.2.402/: BUILD.bazel  generated.bzl  generated2.bzl
dotnet/stdlib.core/v3.0.100/: BUILD.bazel  generated.bzl  generated2.bzl
dotnet/stdlib.core/v3.1.100/: BUILD.bazel  generated.bzl  generated2.bzl
dotnet/stdlib.net/: BUILD.bazel  macro.bzl
dotnet/stdlib.net/net45/: BUILD.bazel  generated.bzl
dotnet/stdlib.net/net451/: BUILD.bazel  generated.bzl
dotnet/stdlib.net/net452/: BUILD.bazel  generated.bzl
dotnet/stdlib.net/net46/: BUILD.bazel  generated.bzl
dotnet/stdlib.net/net461/: BUILD.bazel  generated.bzl
dotnet/stdlib.net/net462/: BUILD.bazel  generated.bzl
dotnet/stdlib.net/net47/: BUILD.bazel  generated.bzl
dotnet/stdlib.net/net471/: BUILD.bazel  generated.bzl
dotnet/stdlib.net/net472/: BUILD.bazel  generated.bzl
dotnet/stdlib.net/net48/: BUILD.bazel  generated.bzl
dotnet/stdlib.net/netstandard1.2/: BUILD.bazel
dotnet/stdlib.netstandard/: BUILD.bazel  macro.bzl
dotnet/toolchain/: BUILD.bazel  toolchains.bzl
dotnet/tools/common/: BUILD  manifest.c  manifest.h  misc.c
dotnet/tools/launcher_core/: main.c
dotnet/tools/launcher_core_xunit/: main.c
dotnet/tools/launcher_mono/: main.c
dotnet/tools/launcher_mono_nunit/: main.c
dotnet/tools/launcher_mono_xunit/: main.c
dotnet/tools/launcher_net/: main.c
dotnet/tools/launcher_net_nunit/: main.c
dotnet/tools/launcher_net_nunit3/: main.c
dotnet/tools/manifest_prep/: main.c
examples/: .bazelrc  BUILD.bazel  MODULE.bazel  WORKSPACE  WORKSPACE.bzlmod  example_deps.bzl  example_deps_extension.bzl  paket.dependencies  paket.example_deps_extension.bzl  update-deps.sh
examples/aspnetcore/: AspNetCore.csproj  BUILD.bazel  MyConfiguration.CS  Program.cs  appsettings.Development.json  appsettings.json
examples/basic_csharp/: BUILD.bazel  hello.cs
examples/basic_fsharp/: BUILD.bazel
examples/ef/: BUILD  WORKSPACE
examples/expecto/: BUILD.bazel
examples/fsharp_type_provider/: BUILD.bazel
examples/grpc/: 0001-rules-proto-grpc.patch  BUILD.bazel  WORKSPACE
examples/import_nuget_package/: BUILD
examples/netstandard2.0/: BUILD.bazel
examples/paket/: BUILD.bazel  Main.fs  paket.dependencies  paket.fsproj  paket2bazel.config.json  update-deps.sh
examples/private_nuget/: nuget.bzl
examples/publish_binary/: BUILD
examples/publish_framework_dependent/: BUILD.bazel
examples/publish_self_contained/: BUILD  BUILD.bazel
examples/runfiles/: RunfilesTest.cs
examples/runfiles_csharp/: BUILD.bazel
examples/runfiles_fsharp/: BUILD.bazel
tools/nuget_repo/: BUILD.bazel  Gen.fs  Models.fs  Parsing.fs  nuget_repo.fsproj  paket.references
tools/paket2bazel/: BUILD.bazel  Gen.fs  Main.fs  Models.fs  Paket.fs  README.md  paket2bazel.fsproj  update-deps.sh
tools/runfiles/: BUILD.bazel  Runfiles.cs
(+273 files in other folders)
