load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("@bazel_gazelle//:def.bzl", "DEFAULT_LANGUAGES", "gazelle", "gazelle_binary")

package(default_visibility = ["//visibility:public"])

exports_files(["AUTHORS"])

gazelle_binary(
    name = "gazelle_bin",
    languages = ["@bazel_skylib_gazelle_plugin//bzl"] + DEFAULT_LANGUAGES,
)

# gazelle:exclude examples
gazelle(
    name = "gazelle",
    gazelle = "gazelle_bin",
)

gazelle(
    name = "gazelle_update_repos",
    args = [
        "-from_file=go.mod",
        "-to_macro=go_deps.bzl%go_deps",
        "-prune",
    ],
    command = "update-repos",
)

sh_binary(
    name = "tidy",
    srcs = ["tidy.sh"],
)

bzl_library(
    name = "internal_deps",
    srcs = ["internal_deps.bzl"],
    deps = [
        "@bazel_tools//tools/build_defs/repo:http.bzl",
        "@bazel_tools//tools/build_defs/repo:utils.bzl",
    ],
)

bzl_library(
    name = "go_deps",
    srcs = ["go_deps.bzl"],
)
