"rules_dotnet"

module(
    name = "rules_dotnet",
    version = "0.0.0",
    compatibility_level = 1,
)

dotnet = use_extension("@rules_dotnet//dotnet:extensions.bzl", "dotnet")
dotnet.toolchain(dotnet_version = "7.0.101")
use_repo(dotnet, "dotnet_toolchains")
register_toolchains("@dotnet_toolchains//:all")

rules_dotnet_nuget_packages = use_extension("//dotnet/rules_dotnet_nuget_packages.bzl", "rules_dotnet_nuget_packages")
use_repo(rules_dotnet_nuget_packages, "rules_dotnet_nuget_packages")

paket2bazel_dependencies = use_extension("//dotnet/paket2bazel_dependencies.bzl", "paket2bazel_dependencies")
use_repo(paket2bazel_dependencies, "paket2bazel_dependencies")

rules_dotnet_dev_nuget_packages = use_extension("//dotnet/rules_dotnet_dev_nuget_packages.bzl", "rules_dotnet_dev_nuget_packages", dev_dependency = True)
use_repo(rules_dotnet_dev_nuget_packages, "rules_dotnet_dev_nuget_packages")

bazel_dep(name = "bazel_skylib", version = "1.4.2")
bazel_dep(name = "aspect_bazel_lib", version = "1.34.5")
bazel_dep(name = "platforms", version = "0.0.7")

# Dev dependencies
bazel_dep(name = "rules_pkg", version = "0.9.1", dev_dependency = True)
bazel_dep(name = "rules_go", version = "0.41.0", repo_name = "io_bazel_rules_go", dev_dependency = True)
bazel_dep(name = "gazelle", repo_name = "bazel_gazelle", version = "0.33.0", dev_dependency = True)
bazel_dep(name = "bazel_skylib_gazelle_plugin", version = "1.4.2", dev_dependency = True)
