load(
    "//dotnet/private:macros/register_tfms.bzl",
    "register_tfms",
)
load(
    "//dotnet/private:macros/register_rids.bzl",
    "register_rids",
)

exports_files(
    [
        "defs.bzl",
        "repositories.bzl",
    ],
    visibility = ["//docs:__pkg__"],
)

toolchain_type(
    name = "toolchain_type",
    visibility = ["//visibility:public"],
)

register_tfms()

register_rids()
