package(default_visibility = ["//visibility:public"])

filegroup(
    name = "mcs_bin",
    srcs = glob([
        "mcs_bin/*",
    ]),
)

filegroup(
    name = "mono_bin",
    srcs = glob([
        "mono_bin/*",
    ]),
)

filegroup(
    name = "lib",
    srcs = glob([
        "lib/**/*",
    ]),
)


filegroup(
    name = "host",
    srcs = glob([
        "host/**/*",
    ]),
)

filegroup(
    name = "native_deps",
    srcs = 
        glob(["core/host/**/*"]) + glob(["core/shared/Microsoft.NETCore.App/**/*"], exclude = ["**/System.*", "**/Microsoft.*"]) + glob(["core/shared/Microsoft.NETCore.App/**/System.Private.*"]),
    )


exports_files(glob(["core/**/*.dll"]))

filegroup(
    name = "runner",
    srcs = select({
        "@bazel_tools//src/conditions:windows": ["core/dotnet.exe"],
        "//conditions:default": ["core/dotnet"],
    }),
    data = glob(["core/host/**/*"]),
)

filegroup(
    name = "csc",
    srcs = glob(["core/**/csc.dll"]),
    data = select({
        "@bazel_tools//src/conditions:windows": glob(["core/**/hostpolicy.dll"]),
        "//conditions:default": glob(["core/**/libhostpolicy.so"]),
    }),
)

filegroup(
    name = "shared",
    srcs = glob([
        "core/shared/**/*",
    ]),
)

exports_files(glob(["core/shared/**/*"]))
