package(default_visibility = ["//visibility:public"])

filegroup(
    name = "roslyn",
    srcs = glob([
        "core/sdk/{sdkVersion}/Roslyn/bincore/**/*",
    ]),
)

filegroup(
    name = "sdk_lib",
    srcs = glob([
        "core/sdk/{sdkVersion}/**/*",
    ]),
)

filegroup(
    name = "host",
    srcs = glob([
        "core/host/fxr/{runtimeVersion}/*",
    ]),
)

filegroup(
    name = "host",
    srcs = glob([
        "core/host/fxr/{runtimeVersion}/*",
    ]),
)

#exports_files(glob(["core/**/*.dll"]))

filegroup(
    name = "runner",
    srcs = select({
        "@bazel_tools//src/conditions:windows": ["core/dotnet.exe"],
        "//conditions:default": ["core/dotnet"],
    }),
    data = glob(["core/host/**/*"]),
)

#filegroup(
#    name = "csc_deps",
#    srcs = glob(["core/**/bincore/*.dll"], exclude=["core/**/bincore/csc.dll"]),
#)


#filegroup(
#    name = "shared",
#    srcs = glob([
#        "core/shared/**/*",
#    ]),
#)

#exports_files(glob(["core/shared/**/*"]))
#exports_files(glob(["core/**/bincore/csc.dll"]))
