package(default_visibility = [ "//visibility:public" ])

load("@io_bazel_rules_dotnet//dotnet/private:rules/stdlib.bzl", "net_stdlib")
load(":macro.bzl", "multi_framework_stdlib")
  
multi_framework_stdlib(name="mscorlib.dll")
multi_framework_stdlib(name="accessibility.dll")
multi_framework_stdlib(name="custommarshalers.dll")
multi_framework_stdlib(name="isymwrapper.dll")
multi_framework_stdlib(name="microsoft.activities.build.dll")
multi_framework_stdlib(name="microsoft.build.conversion.v4.0.dll")
multi_framework_stdlib(name="microsoft.build.dll")
multi_framework_stdlib(name="microsoft.build.engine.dll")
multi_framework_stdlib(name="microsoft.build.framework.dll")
multi_framework_stdlib(name="microsoft.build.tasks.v4.0.dll")
multi_framework_stdlib(name="microsoft.build.utilities.v4.0.dll")
multi_framework_stdlib(name="microsoft.csharp.dll")
multi_framework_stdlib(name="microsoft.jscript.dll")
multi_framework_stdlib(name="microsoft.visualbasic.compatibility.data.dll")
multi_framework_stdlib(name="microsoft.visualbasic.compatibility.dll")
multi_framework_stdlib(name="microsoft.visualbasic.dll")
multi_framework_stdlib(name="microsoft.visualc.dll")
multi_framework_stdlib(name="microsoft.visualc.stlclr.dll")
multi_framework_stdlib(name="presentationbuildtasks.dll")
multi_framework_stdlib(name="presentationcore.dll")
multi_framework_stdlib(name="presentationframework.aero.dll")
multi_framework_stdlib(name="presentationframework.aero2.dll")
multi_framework_stdlib(name="presentationframework.aerolite.dll")
multi_framework_stdlib(name="presentationframework.classic.dll")
multi_framework_stdlib(name="presentationframework.dll")
multi_framework_stdlib(name="presentationframework.luna.dll")
multi_framework_stdlib(name="presentationframework.royale.dll")
multi_framework_stdlib(name="reachframework.dll")
multi_framework_stdlib(name="sysglobl.dll")
multi_framework_stdlib(name="system.activities.core.presentation.dll")
multi_framework_stdlib(name="system.activities.dll")
multi_framework_stdlib(name="system.activities.durableinstancing.dll")
multi_framework_stdlib(name="system.activities.presentation.dll")
multi_framework_stdlib(name="system.addin.contract.dll")
multi_framework_stdlib(name="system.addin.dll")
multi_framework_stdlib(name="system.componentmodel.composition.dll")
multi_framework_stdlib(name="system.componentmodel.composition.registration.dll")
multi_framework_stdlib(name="system.componentmodel.dataannotations.dll")
multi_framework_stdlib(name="system.configuration.dll")
multi_framework_stdlib(name="system.configuration.install.dll")
multi_framework_stdlib(name="system.core.dll")
multi_framework_stdlib(name="system.data.datasetextensions.dll")
multi_framework_stdlib(name="system.data.dll")
multi_framework_stdlib(name="system.data.entity.design.dll")
multi_framework_stdlib(name="system.data.entity.dll")
multi_framework_stdlib(name="system.data.linq.dll")
multi_framework_stdlib(name="system.data.oracleclient.dll")
multi_framework_stdlib(name="system.data.services.client.dll")
multi_framework_stdlib(name="system.data.services.design.dll")
multi_framework_stdlib(name="system.data.services.dll")
multi_framework_stdlib(name="system.data.sqlxml.dll")
multi_framework_stdlib(name="system.deployment.dll")
multi_framework_stdlib(name="system.design.dll")
multi_framework_stdlib(name="system.device.dll")
multi_framework_stdlib(name="system.diagnostics.tracing.dll")
multi_framework_stdlib(name="system.directoryservices.accountmanagement.dll")
multi_framework_stdlib(name="system.directoryservices.dll")
multi_framework_stdlib(name="system.directoryservices.protocols.dll")
multi_framework_stdlib(name="system.dll")
multi_framework_stdlib(name="system.drawing.design.dll")
multi_framework_stdlib(name="system.drawing.dll")
multi_framework_stdlib(name="system.enterpriseservices.dll")
multi_framework_stdlib(name="system.identitymodel.dll")
multi_framework_stdlib(name="system.identitymodel.selectors.dll")
multi_framework_stdlib(name="system.identitymodel.services.dll")
multi_framework_stdlib(name="system.io.compression.dll")
multi_framework_stdlib(name="system.io.compression.filesystem.dll")
multi_framework_stdlib(name="system.io.log.dll")
multi_framework_stdlib(name="system.management.dll")
multi_framework_stdlib(name="system.management.instrumentation.dll")
multi_framework_stdlib(name="system.messaging.dll")
multi_framework_stdlib(name="system.net.dll")
multi_framework_stdlib(name="system.net.http.dll")
multi_framework_stdlib(name="system.net.http.webrequest.dll")
multi_framework_stdlib(name="system.numerics.dll")
multi_framework_stdlib(name="system.printing.dll")
multi_framework_stdlib(name="system.reflection.context.dll")
multi_framework_stdlib(name="system.runtime.dll")
multi_framework_stdlib(name="system.runtime.caching.dll")
multi_framework_stdlib(name="system.runtime.durableinstancing.dll")
multi_framework_stdlib(name="system.runtime.remoting.dll")
multi_framework_stdlib(name="system.runtime.serialization.dll")
multi_framework_stdlib(name="system.runtime.serialization.formatters.soap.dll")
multi_framework_stdlib(name="system.security.dll")
multi_framework_stdlib(name="system.servicemodel.activation.dll")
multi_framework_stdlib(name="system.servicemodel.activities.dll")
multi_framework_stdlib(name="system.servicemodel.channels.dll")
multi_framework_stdlib(name="system.servicemodel.discovery.dll")
multi_framework_stdlib(name="system.servicemodel.dll")
multi_framework_stdlib(name="system.servicemodel.routing.dll")
multi_framework_stdlib(name="system.servicemodel.web.dll")
multi_framework_stdlib(name="system.serviceprocess.dll")
multi_framework_stdlib(name="system.speech.dll")
multi_framework_stdlib(name="system.transactions.dll")
multi_framework_stdlib(name="system.web.abstractions.dll")
multi_framework_stdlib(name="system.web.applicationservices.dll")
multi_framework_stdlib(name="system.web.datavisualization.design.dll")
multi_framework_stdlib(name="system.web.datavisualization.dll")
multi_framework_stdlib(name="system.web.dll")
multi_framework_stdlib(name="system.web.dynamicdata.design.dll")
multi_framework_stdlib(name="system.web.dynamicdata.dll")
multi_framework_stdlib(name="system.web.entity.design.dll")
multi_framework_stdlib(name="system.web.entity.dll")
multi_framework_stdlib(name="system.web.extensions.design.dll")
multi_framework_stdlib(name="system.web.extensions.dll")
multi_framework_stdlib(name="system.web.mobile.dll")
multi_framework_stdlib(name="system.web.regularexpressions.dll")
multi_framework_stdlib(name="system.web.routing.dll")
multi_framework_stdlib(name="system.web.services.dll")
multi_framework_stdlib(name="system.windows.controls.ribbon.dll")
multi_framework_stdlib(name="system.windows.dll")
multi_framework_stdlib(name="system.windows.forms.datavisualization.design.dll")
multi_framework_stdlib(name="system.windows.forms.datavisualization.dll")
multi_framework_stdlib(name="system.windows.forms.dll")
multi_framework_stdlib(name="system.windows.input.manipulations.dll")
multi_framework_stdlib(name="system.windows.presentation.dll")
multi_framework_stdlib(name="system.workflow.activities.dll")
multi_framework_stdlib(name="system.workflow.componentmodel.dll")
multi_framework_stdlib(name="system.workflow.runtime.dll")
multi_framework_stdlib(name="system.workflowservices.dll")
multi_framework_stdlib(name="system.xaml.dll")
multi_framework_stdlib(name="system.xml.dll")
multi_framework_stdlib(name="system.xml.linq.dll")
multi_framework_stdlib(name="system.xml.serialization.dll")
multi_framework_stdlib(name="uiautomationclient.dll")
multi_framework_stdlib(name="uiautomationclientsideproviders.dll")
multi_framework_stdlib(name="uiautomationprovider.dll")
multi_framework_stdlib(name="uiautomationtypes.dll")
multi_framework_stdlib(name="windowsbase.dll")
multi_framework_stdlib(name="windowsformsintegration.dll")
multi_framework_stdlib(name="xamlbuildtask.dll")
multi_framework_stdlib(name="system.text.regularexpressions.dll")
multi_framework_stdlib(name="system.runtime.extensions.dll")
multi_framework_stdlib(name="system.xml.readerwriter.dll")

[net_stdlib(
    name="{}_system.componentmodel.typeconverter.dll".format(framework),
    dll = "system.componentmodel.typeconverter.dll",
    dotnet_context_data = "@io_bazel_rules_dotnet//:net_context_data_{}".format(framework),
) for framework in ["net471","net472"]]

[net_stdlib(
    name="{}_system.collections.specialized.dll".format(framework),
    dll = "system.collections.specialized.dll",
    dotnet_context_data = "@io_bazel_rules_dotnet//:net_context_data_{}".format(framework),
) for framework in ["net471","net472"]]

[net_stdlib(
    name="{}_system.diagnostics.tracesource.dll".format(framework),
    dll = "system.diagnostics.tracesource.dll",
    dotnet_context_data = "@io_bazel_rules_dotnet//:net_context_data_{}".format(framework),
) for framework in ["net471","net472"]]

[net_stdlib(
    name="{}_system.dynamic.dll".format(framework),
    dll = "system.dynamic.dll",
    dotnet_context_data = "@io_bazel_rules_dotnet//:net_context_data_{}".format(framework),
) for framework in ["net46","net461","net47","net471","net472"]]

