load(
    ":toolchains.bzl",
    "declare_toolchains",
)
load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

package(default_visibility = ["//visibility:public"])

declare_toolchains()

bzl_library(
    name = "bzl_library",
    srcs = [
        "toolchains.bzl",
    ],
    deps = [
        "//dotnet/platform:bzl_library",
        "//dotnet/private:bzl_library",
    ],
)

filegroup(
    name = "all_rules",
    srcs = glob(["**/*.bzl"]),
    visibility = ["//visibility:public"],
)
