load(
    "@rules_dotnet//dotnet:defs.bzl",
    "fsharp_nunit_test",
)

fsharp_nunit_test(
    name = "fsharp_type_provider",
    srcs = ["Main.fs"],
    private_deps = [
        "@example_deps//microsoft.netcore.app.ref",
    ],
    target_frameworks = ["net7.0"],
    deps = [
        "//fsharp_type_provider/type_provider_lib",
        "@example_deps//fsharp.core",
        "@example_deps//fsharp.data",
    ],
)
