load(
    "@rules_dotnet//dotnet:defs.bzl",
    "csharp_library",
)

csharp_library(
    name = "runfiles",
    srcs = ["Runfiles.cs"],
    private_deps = [
        "@rules_dotnet_deps//microsoft.netcore.app.ref",
    ],
    target_frameworks = ["net6.0"],
    visibility = ["//visibility:public"],
    deps = [
    ],
)
