load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

bzl_library(
    name = "csharp_assembly",
    srcs = ["csharp_assembly.bzl"],
    visibility = ["//dotnet:__subpackages__"],
    deps = [
        ":misc",
        "//dotnet/private:common",
        "//dotnet/private:providers",
    ],
)

bzl_library(
    name = "fsharp_assembly",
    srcs = ["fsharp_assembly.bzl"],
    visibility = ["//dotnet:__subpackages__"],
    deps = [
        ":misc",
        "//dotnet/private:common",
        "//dotnet/private:providers",
    ],
)

bzl_library(
    name = "misc",
    srcs = ["misc.bzl"],
    visibility = ["//dotnet:__subpackages__"],
)
