package(default_visibility = ["//visibility:public"])

load("@io_bazel_rules_dotnet//dotnet/stdlib.core:macro.bzl", "all_core_stdlib")
load("@io_bazel_rules_dotnet//dotnet/private:rules/stdlib.bzl", "core_stdlib")

framework = "v2.1.502"

# system.memory.dll is not present in netcoreapp 2.1.200
core_stdlib(
    name = "system.memory.dll",
    dll = "system.memory.dll",
    dotnet_context_data = "@io_bazel_rules_dotnet//:core_context_data_{}".format(framework),
)

core_stdlib(
    name = "system.private.corelib.dll",
    dll = "system.private.corelib.dll",
    dotnet_context_data = "@io_bazel_rules_dotnet//:core_context_data_{}".format(framework),
    deps = ["system.memory.dll"],
)

all_core_stdlib(framework)

alias(name = "netstandard.library.dll", actual = ":netstandard.dll")
