load("@rules_mono//dotnet:defs.bzl", "DEFAULT_DOTNET_CORE_FRAMEWORK", "core_binary", "core_xunit_test")

framework = DEFAULT_DOTNET_CORE_FRAMEWORK

core_binary(
    name = "custom_bin.exe",
    srcs = [
        "main.cs",
    ],
    deps = [
        "@rules_mono//dotnet/stdlib.core:libraryset",
    ],
)

core_xunit_test(
    name = "custom_bin_test.dll",
    size = "medium",
    srcs = [
        "main_test.cs",
    ],
    data = [
        ":custom_bin.exe",
    ],
    deps = [
        "@rules_mono//dotnet/stdlib.core:libraryset",
        "@xunit.assert//:netcoreapp2.1_core",
        "@xunit.extensibility.core//:netcoreapp2.1_core",
        "@xunit.extensibility.execution//:netcoreapp2.1_core",
    ],
)
