load("@rules_mono//dotnet:defs.bzl", "core_library", "core_xunit_test")

core_library(
    name = "custom_bin.dll",
    srcs = [
        "main.cs",
    ],
    out = "alt_bin.dll",
    deps = [
        "@rules_mono//dotnet/stdlib.core:libraryset",
    ],
)

core_xunit_test(
    name = "custom_bin_test.dll",
    size = "medium",
    srcs = [
        "main_test.cs",
    ],
    data = [
        ":custom_bin.dll",
    ],
    version = "1.0",
    deps = [
        "@rules_mono//dotnet/stdlib.core:libraryset",
        "@xunit.assert//:core",
        "@xunit.extensibility.core//:core",
        "@xunit.extensibility.execution//:core",
    ],
)
