load("@rules_mono//dotnet:defs.bzl", "dotnet_binary", "dotnet_nunit_test")

dotnet_binary(
    name = "custom_bin.exe",
    srcs = [
        "main.cs",
    ],
    deps = [
        "@rules_mono//dotnet/stdlib:system.dll",
    ],
)

dotnet_nunit_test(
    name = "custom_bin_test.dll",
    size = "small",
    srcs = [
        "main_test.cs",
    ],
    data = [
        ":custom_bin.exe",
    ],
    deps = [
        "@rules_mono//dotnet/stdlib:system.dll",
        "@nunitv2//:netstandard1.0_net",
    ],
)
