load("@rules_mono//dotnet:defs.bzl", "core_xunit_test")

core_xunit_test(
    name = "roslyn.dll",
    size = "large",
    srcs = [
        "roslyn.cs",
    ],
    data = [
        "BUILD.in",
        "MyTest.cs.in",
        "WORKSPACE.in",
        "//tests:all_rules_md5",
    ],
    deps = [
        "//tests/testlib:testlib.dll",
        "@rules_mono//dotnet/stdlib.core:libraryset",
        "@xunit.assert//:netcoreapp2.0_core",
        "@xunit.extensibility.core//:netcoreapp2.0_core",
        "@xunit.extensibility.execution//:netcoreapp2.0_core",
    ],
)
