load(":targeting_packs.bzl", "targeting_packs")
load(":targeting_pack.bzl", "targeting_pack")

targeting_packs()

label_setting(
    name = "targeting_pack",
    build_setting_default = ":empty_pack",
    visibility = ["//visibility:public"],
)

# This target is only for the default value of the label setting
# and the transition should always transition from it to something else
targeting_pack(
    name = "empty_pack",
    packs = [],
    visibility = ["//visibility:public"],
)
